--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "antd": "^4.19.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^6.2.2",
     "styled-components": "^5.3.3"
   },
   "devDependencies": {
