--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
   "dependencies": {
     "antd": "^4.19.2",
     "axios": "^0.26.1",
+    "clipboard": "^2.0.10",
     "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.2",
     "styled-components": "^5.3.3",
-    "swr": "^1.2.2"
+    "swr": "^1.2.2",
+    "tiny-pinyin": "^1.3.2"
   },
   "devDependencies": {
     "@types/node": "^17.0.21",
