--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@wangeditor/editor": "^0.15.18",
+    "@wangeditor/editor-for-react": "^0.6.25",
     "antd": "^4.19.2",
     "axios": "^0.26.1",
     "clipboard": "^2.0.10",
